# grasp

./: .env.example  .gitignore  Building Institutional AI Brain.md  Building Institutional AI Brain2.md  Dockerfile  README.md  dark.txt  docker-compose.yml  dump.py  implementation_plan.md  implementation_plan2.md  light.txt  main.py  pyproject.toml  recover.json
src/: __init__.py  auth.py  config.py  contributions.py  database.py
src/agent/: __init__.py  engine.py  sub_agents.py  tools.py
src/api/: __init__.py  models.py  server.py
src/connectors/: __init__.py  base.py  confluence.py  jira.py  notion.py  sharepoint.py  slack.py
src/index/: __init__.py  vector_store.py
src/repo/: __init__.py  manager.py
src/static/: admin.html  admin.js  app.js  index.html  login.html  login.js  styles.css
src/sync/: __init__.py  checkpoints.py  orchestrator.py  scheduler.py
