[project]
name = "grasp"
version = "1.0.0"
description = "Agentic AI institutional brain — retrieves, indexes, and reasons over company knowledge from Confluence, Jira, SharePoint, Slack, and Notion."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "anthropic>=0.40.0",
    "chromadb>=0.5.0",
    "gitpython>=3.1.40",
    "apscheduler>=3.10.0,<4.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.13.0",
    "sse-starlette>=2.0.0",
    "python-docx>=1.1.0",
    "PyPDF2>=3.0.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5.0",
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
